# tlr_ws

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/tlr_detector/lib/tlr_detector/: launcher_node  tlr_detector_node  tlr_hsv_node  traffic_light_mode_changer
install/tlr_detector/share/tlr_detector/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/tlr_detector/share/tlr_detector/cmake/: tlr_detectorConfig-version.cmake  tlr_detectorConfig.cmake
install/tlr_detector/share/tlr_detector/config/: tlr_hsv_params.yaml
install/tlr_detector/share/tlr_detector/environment/: ament_prefix_path.dsv  path.dsv
install/tlr_detector/share/tlr_detector/launch/: tlr.launch.py
install/ultralytics_ros/lib/ultralytics_ros/: tracker_node.py  tracker_with_cloud_node
install/ultralytics_ros/share/ultralytics_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/ultralytics_ros/share/ultralytics_ros/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_ultralytics_ros__rosidl_typesupport_fastrtps_cExport-release.cmake  export_ultralytics_ros__rosidl_typesupport_fastrtps_cppExport-release.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  ultralytics_rosConfig-version.cmake  ultralytics_rosConfig.cmake  ultralytics_ros__rosidl_typesupport_cppExport-release.cmake  ultralytics_ros__rosidl_typesupport_introspection_cExport-release.cmake  ultralytics_ros__rosidl_typesupport_introspection_cppExport-release.cmake
install/ultralytics_ros/share/ultralytics_ros/environment/: ament_prefix_path.dsv  library_path.dsv  path.dsv  (+2 more)
install/v4l2_camera/include/v4l2_camera/: control.hpp  fourcc.hpp  image_format.hpp  pixel_format.hpp  rate_bound_status.hpp  v4l2_camera.hpp  v4l2_camera_device.hpp  visibility_control.h
install/v4l2_camera/lib/v4l2_camera/: v4l2_camera_compose_test  v4l2_camera_node
install/v4l2_camera/share/v4l2_camera/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/ros2_v4l2_camera/: CMakeLists.txt
src/ros2_v4l2_camera/launch/: v4l2_camera.launch.py
src/ros2_v4l2_camera/src/: v4l2_camera.cpp
src/tlr_detector/: CMakeLists.txt  hsv_tuner.html  package.xml  tuner_backend.py
src/tlr_detector/config/: tlr_hsv_params.yaml
src/tlr_detector/include/tlr_detector/: launcher_node.hpp  tlr_detector_node.hpp  tlr_hsv_node.hpp  traffic_light_mode_changer.hpp
src/tlr_detector/launch/: tlr.launch.py
src/tlr_detector/src/: launcher_node.cpp  tlr_detector_node.cpp  tlr_hsv_node.cpp  traffic_light_mode_changer.cpp
src/ultralytics_ros/launch/: tracker.launch.xml
src/ultralytics_ros/script/: tracker_node.py
(+55 files in other folders)
