<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tlr_detector</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jeonghh613@gmail.com">sws</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>vision_msgs</depend>
  <depend>ultralytics_ros</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>
  <depend>std_msgs</depend>
  <depend>autoware_adapi_v1_msgs</depend>
  <exec_depend>launch_ros</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
